environments/dev-new/patches/set-env.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: morphic-community-manager
spec:
  template:
    spec:
      containers:
      - name: morphic-community-manager
