environments/dev-new/patches/update-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: morphic-community-manager
spec:
  tls:
    - hosts:
        - community.msd-test.com
      secretName: morphic-community-manager-tls
  rules:
    - host: community.msd-test.com
      http:
        paths:
          - backend:
              serviceName: morphic-community-manager
              servicePort: http
            path: /
